--- a/Flask Website/Website/Templates/base.html
+++ b/Flask Website/Website/Templates/base.html
@@ -14,12 +14,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-    <title>
-      {% block title %} Load Control Technologies Management System {% endblock
-      %}
-    </title>
+    <title>{% block title %} LCT Dashboard{% endblock %}</title>
   </head>
   <body>
+    {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button
         class="navbar-toggler"
@@ -38,9 +36,8 @@
         </div>
       </div>
     </nav>
-
-    {% with messages = get_flashed_messages(with_categories=true)%} {%if
-    messages%} {% for category, message in messages%} {% if category ==
+    {%endif%} {% with messages = get_flashed_messages(with_categories=true)%}
+    {%if messages%} {% for category, message in messages%} {% if category ==
     'Error'%}
     <div class="alert alert-danger alter-dismissable fade show" role="alert">
       {{message}}
